fixes to shell settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,20 @@
 {
-    "terminal.integrated.profiles.linux": {
-      "default": {
-        "path": "/bin/bash",
-        "args": ["--init-file", ".vscode/shell.sh"]
-      }
-    },
-    "terminal.integrated.profiles.osx": {
-      "default": {
-        "path": "/bin/zsh",
-        "args": ["-l", "-c", "source .vscode/shell.sh && exec zsh"]
-      }
-    },
-    "terminal.integrated.defaultProfile.linux": "default",
-    "terminal.integrated.defaultProfile.osx": "default"
+  "terminal.integrated.profiles.linux": {
+    "bash": {
+      "path": "/bin/bash",
+      // "args": [ "--rcfile", ".vscode/shell.sh" ]
+    }
+  },
+  "terminal.integrated.profiles.osx": {
+    "zsh": {
+      "path": "/bin/zsh",
+      // "args": [ "--rcs", ".vscode/shell.sh" ]
+    }
+  },
+  "terminal.integrated.shellIntegration.enabled": false,
+  "terminal.integrated.defaultProfile.linux": "bash",
+  "terminal.integrated.defaultProfile.osx": "zsh",
+  "terminal.integrated.automationProfile.osx": {
+    "path": "/bin/zsh"
   }
+}
