--- a/actor-critic/examples/config.yaml
+++ b/actor-critic/examples/config.yaml
@@ -1,26 +1,28 @@
 agent_params:
-  alpha: 0.2
+  alpha: 0.1
   automatic_entropy_tuning: true
-  batch_size: 256
-  buffer_size: 500000
+  batch_size: 64
+  buffer_size: 100000
   gamma: 0.99
-  gradient_clip: 1.0
-  hidden_dim: 128
-  learning_rate: 5.0e-05
-  tau: 0.005
-  use_batch_norm: false
+  gradient_clip: 0.5
+  hidden_dim: 64
+  learning_rate: 0.0001
+  tau: 0.01
+  use_batch_norm: true
 commission: 0.001
-early_stopping_window: 50
-num_episodes: 200
+early_stopping_window: 20
+eval_episodes: 2
+eval_interval: 5
+num_episodes: 100
 risk_params:
-  max_drawdown: 0.15
-  max_leverage: 0.8
-  max_position: 0.5
-  position_step: 0.05
+  max_drawdown: 0.1
+  max_leverage: 0.5
+  max_position: 0.2
+  position_step: 0.02
   transaction_cost: 0.001
-  vol_lookback: 50
-  vol_target: 0.1
-save_interval: 10000
-start_training_after_steps: 5000
-target_sharpe: 1.0
-window_size: 50
+  vol_lookback: 20
+  vol_target: 0.05
+save_interval: 5000
+start_training_after_steps: 1000
+target_sharpe: 0.5
+window_size: 20
