--- a/actor-critic/config/training_config.yaml
+++ b/actor-critic/config/training_config.yaml
@@ -6,13 +6,17 @@ start_training_after_steps: 10000
 save_interval: 50000
 early_stopping_window: 100
 target_sharpe: 1.5
+eval_interval: 1
+eval_episodes: 5
+n_trials: 1
+jobs_per_gpu: 1
 
 # Risk management parameters
 risk_params:
-  max_position: 1.0
+  max_position: 0.3
   max_leverage: 1.0
   position_step: 0.1
-  max_drawdown: 0.15
+  max_drawdown: 0.2
   vol_lookback: 20
   vol_target: 0.15
   transaction_cost: 0.001
